packages/svelte/tests/compiler-errors/samples/runes-no-derived-assignment/main.svelte
<script>
	const a = $state(0);
	let b = $derived(a);
	b = 1;
</script>
